--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/dispenses.html.twig
@@ -45,53 +45,91 @@
 {% endblock %}
 
 {% block body %}
-
 	<div class="page-header">
         <h1>{{ 'dispenses.header' | trans }}</h1>
-	</div>
-	
-		<!-- treure data toggle, fer-ho amb pagines diferents comprovant que esta seleccionat -->
-		
+	</div>	
 	<div class="row" style="margin-bottom: 5px;margin-left: 15px;margin-right: 0px">
 		<div class="btn-group" style="margin-top:5px;margin-bottom:5px;">
-			<button type="button" class="btn {% if seleccio is sameas("dispenses") %}btn-primary{% else %}btn-default{% endif %}" 
-					data-toggle="tab" data-target="#dispenses" style="margin-bottom:-1px;">
-				 	Dispenses Matrimonials &nbsp;
-			</button>
+			<a type="button" class="btn {% if seleccio is sameas("dispenses") %}btn-primary{% else %}btn-default{% endif %}" 
+					style="margin-bottom:-1px;" href="{{ path('dispenses') }}" >
+				 	Dispenses Matrimonials
+			</a>
 		</div>
 		
 		<div class="btn-group" style="margin-top:5px;margin-bottom:5px;">
-			<button type="button" class="btn {% if seleccio is sameas("cognoms") %}btn-primary{% else %}btn-default{% endif %}" 
-					data-toggle="tab" data-target="#semblants" style="margin-bottom:-1px;">
-				 	Cognoms semblants &nbsp;
-			</button>
+			<a type="button" class="btn {% if seleccio is sameas("cognoms") %}btn-primary{% else %}btn-default{% endif %}" 
+					style="margin-bottom:-1px;" href="{{ path('cognoms') }}" >
+				 	Cognoms semblants
+			</a>
 		</div>
 	</div>
 	<div class="space10"></div>
 	
 	<div class="row" style="margin-bottom: 5px;margin-left: 0px;margin-right: 0px">
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+		<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
 			<div class="panel panel-default">
-				{% include 'ArxiuBundle:Dispenses:cerca.html.twig' %}
+				{% if seleccio is sameas('dispenses') %}
+					{% include 'ArxiuBundle:Dispenses:cercaDispenses.html.twig' %}
+				{% else %}
+					{% include 'ArxiuBundle:Dispenses:cercaCognoms.html.twig' %}
+				{% endif %}
 			</div>
 		</div><!--/Cerca-->
-		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="panel panel-info">
-				<div class="panel-heading">
-					<h4 style="margin-top:-3px;margin-bottom:-3px">Informació</h4>
+		
+		<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+			{% if info is not null %}
+				{% if seleccio is sameas('dispenses') %}
+					<!-- taula dispenes -->
+					<table class="table table-striped table-bordered table-hover" id="dispenses_table">
+				        <thead>
+				            <tr>
+				                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'dispenses.taula.classificacio' | trans }}</th>
+				                <th class="centered-text">{{ 'dispenses.taula.any' | trans }}</th>
+				                <th class="centered-text">{{ 'dispenses.taula.manom' | trans }}</th>
+				                <th class="centered-text">{{ 'dispenses.taula.macog' | trans }}</th>
+				                <th class="centered-text">{{ 'dispenses.taula.munom' | trans }}</th>
+				                <th class="centered-text">{{ 'dispenses.taula.mucog' | trans }}</th>
+							    <th class="centered-text">{{ 'dispenses.taula.operacions' | trans }}</th>            
+				            </tr>
+				        </thead>
+			            <tbody>
+			                {% for i in info %}
+			                    <tr>
+			                        <td style="min-width: 100px">{{ i.nodac }}</td>
+					                <td>{{ i.any }}</td>
+					                <td>{{ i.maritNom }}</td>
+					                <td>{{ i.maritCognom1 }}</td>
+					                <td>{{ i.mullerNom }}</td>
+					                <td>{{ i.mullerCognom1 }}</td>
+		                        	<td>
+		                        		<a data-toggle="modal" href="{{  path('dispenses_detall', {'id':i.numref }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+		                        		
+			                			{% if is_granted('ROLE_ADMIN') %}
+			                        		<a data-toggle="modal" href="{{ path('dispenses') }}" data-target="#editarDispenses" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
+			                        		<a data-toggle="modal" href="{{path('dispenses') }}" data-target="#eliminarDispenses" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
+			                        	{% endif %}
+		                        	</td>
+			                    </tr>
+			                 
+			                {% endfor %}
+			            </tbody>
+			        </table>
+				{% else %}
+					<!-- taula cognoms -->
+				{% endif %}
+				
+			{% else %}
+				<div class="alert alert-info" >
+					{{ 'dispenses.alerta' | trans }}
 				</div>
-
-				<div class="panel-body">
-					bla
-				</div>
-			</div>
+			{% endif %}	
 		</div><!--/taula -->
 	</div>
 	
 	{# Modals #}
-	{% if is_granted('ROLE_ADMIN') %}  
 		<div class="modal" id="ampliarInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		</div><!-- /.modal -->
+	{% if is_granted('ROLE_ADMIN') %}  
 		
 		<div class="modal" id="nouDispenses" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		</div><!-- /.modal -->
