--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/detall.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/detall.html.twig
@@ -11,7 +11,6 @@
       		{% if info.data is not null and info.data is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.data' | trans }}</h5><p>{{ info.data }}</p>{% endif %}
       		{% if info.any is not null and info.any is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.any' | trans }}</h5><p>{{ info.any }}</p>{% endif %}
       		{% if info.tipus is not null and info.tipus is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.tipus' | trans }}</h5><p>{{ info.tipus }}</p>{% endif %}
-      		{% if info.control is not null and info.control is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.control' | trans }}</h5><p>{{ info.control }}</p>{% endif %}
       		
       		<h4>Marit</h4>
       		{% if info.maritNom is not null and info.maritNom is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.nom' | trans }}</h5><p>{{ info.maritNom }}</p>{% endif %}
@@ -34,20 +33,27 @@
             {% if info.mullerVeinatge is not null and info.mullerVeinatge is not empty %}<h5 style="color: #3a87ad">{{ 'dispenses.detall.Veinatge' | trans }}</h5><p>{{ info.mullerVeinatge }}</p>{% endif %}
       		
       		{% if is_granted('ROLE_USER') %} 
-      			{% if document is not null and document is not empty %}
-      				<a  class="btn btn-info" type="button" href="{{ document }}"><img src="{{ asset('bundles/adg/img/pdf-icon.gif') }}"/>&nbsp;Veure document&nbsp;</a>
+      			{% for d in document %}
+      				{% if d is not null and d is not empty %}
+	      				<a  class="btn btn-info" type="button" style="margin-bottom:5px;"href="{{ d }}">
+	      					<img src="{{ asset('bundles/adg/img/pdf-icon.gif') }}"/>
+	      					&nbsp;Veure document&nbsp;
+	      				</a>
+	      			{% elseif loop.first %}
+	      				<div class="alert alert-warning">
+		            		La imatge digitalitzada d'aquest document no està disponible.
+		            	</div>
+	      			{% endif %} 
       			{% else %}
       				<div class="alert alert-warning">
-	            		La imatge digitalitzada d'aquest document no està disponible.
+	            		La imatge digitalitzada d'aquest document és consultable a l'Arxiu Diocesà. 
 	            	</div>
-      			{% endif %} 
-				
+      			{% endfor %}
       		{% else %}
       			<div class="alert alert-warning">
 	            	La imatge digitalitzada d'aquest document és consultable a l'Arxiu Diocesà. 
 	            </div>
       		{% endif %}
-      		
         </div>
         <div class="modal-footer">
           <button class="btn btn-default" data-dismiss="modal">{{ 'dispenses.detall.tancar' | trans }}</button>
